--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   "dependencies": {
     "aylien_textapi": "^0.7.0",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
-    "webpack": "^4.43.0"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.6",
@@ -24,8 +23,14 @@
     "babel-jest": "^26.0.1",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.5.3",
     "html-webpack-plugin": "^3.2.0",
     "jest": "^26.0.1",
+    "node-sass": "^4.14.1",
+    "sass": "^1.26.5",
+    "sass-loader": "^8.0.2",
+    "style-loader": "^1.2.1",
+    "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.10.3"
   }
