--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
+    "babel-core": "^6.26.3",
     "babel-jest": "^26.0.1",
     "babel-loader": "^8.1.0",
     "clean-webpack-plugin": "^3.0.0",
@@ -28,6 +29,7 @@
     "html-webpack-plugin": "^3.2.0",
     "jest": "^26.0.1",
     "node-sass": "^4.14.1",
+    "regenerator-runtime": "^0.13.5",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "style-loader": "^1.2.1",
